# bootcamp_Python_06-10

./: README.md
aula07/: desafio_aula07.py  etl.py  exemplo_aula07.py  exercicios_aula07.py  vendas.csv
aula08/: etl.py  pipeline.py  pyproject.toml
aula09/: exemplo_aula09_00.py  logging_exemplos_erros.py  pyproject.toml
